# NL2SQL_CHINOOK

./: .gitignore  README.md  pyproject.toml  queries.sql
src/: database_queries.py  llm_sql_generator.py  main.py  schema_inspector.py
tests/: test_llm_sql_generator.py  test_schema_inspector.py
